# golden-chicken

./: .gitignore  GoldenChicken_PRD_Corrected.docx.md
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.worker  GoldenChicken_Backend_Implementation_Plan.md  alembic.ini  celerybeat-schedule  docker-compose.yml  pyproject.toml  rate-limit.txt  requirements-dev.txt  requirements.txt
backend/alembic/versions/: 5ad2f99f0869_initial_schema.py
backend/app/: config.py  main.py
backend/app/ai/: gemini_client.py  intent.py  safety.py
backend/app/api/: router.py
backend/app/core/: constants.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  middleware.py  pagination.py  rate_limit.py  security.py  storage.py
backend/app/models/: __init__.py  base.py  chat.py  farm.py  health.py  insights.py  knowledge.py  market.py  production.py  task.py  user.py  user_session.py  weather.py
backend/app/repositories/: base.py  chat_repository.py  farm_repository.py  health_repository.py  insights_repository.py  knowledge_repository.py  market_repository.py  production_repository.py  session_repository.py  task_repository.py  user_repository.py
backend/app/schemas/: auth.py  chat.py  common.py  diagnosis.py  farm.py  health.py  insights.py  market.py  production.py  task.py  user.py  weather.py
backend/app/services/: auth_service.py  chat_service.py  farm_service.py  insights_service.py  (+5 more)
backend/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
backend/tests/: conftest.py
(+247 files in other folders)
